--- a/Test.html
+++ b/Test.html
@@ -26,6 +26,7 @@
 	client.start(loadCompleteHandler, loadFailedHandler);
 
 	function loadCompleteHandler() {
+        debugger;
 		var experiments = client._experiments;
 		var features = client._features;
 		var levelPacks = client._levelPacks;
@@ -37,10 +38,12 @@
 	}
 
 	function loadFailedHandler(error) {
+        debugger;
 		console.log(error);
 	}
 
 	function levelLoadCompleteHandler() {
+        debugger;
 		var pack = client._levelPacks[0];
 		var level = pack._levels[0];
 		
