added syncFeature function

--- a/Test.html
+++ b/Test.html
@@ -11,8 +11,9 @@
 	<script src="game/SLTLevelBoardParser.js"></script>
 	<script src="game/SLTLevel.js"></script>
 	<script src="game/SLTLevelPack.js"></script>
+	<script src="SLTFeature.js"></script>
 	<script src="resource/SLTTransport.js"></script>
-	<script src="resource/SLTResourceURLTicket.js"></script>
+	<script src="resource/SLTResourceTicket.js"></script>
 	<script src="resource/SLTResource.js"></script>
 	<script src="SLTSaltr.js"></script>
 </head>
