Added asset and state parsing

--- a/Test.html
+++ b/Test.html
@@ -8,11 +8,13 @@
 	<script src="SLTTimer.js"></script>
 	<script src="SLTDevice.js"></script>
 	<script src="SLTDeserializer.js"></script>
+	<script src="SLTFeature.js"></script>
 	<script src="game/SLTLevelBoardParser.js"></script>
 	<script src="game/SLTLevel.js"></script>
 	<script src="game/SLTLevelPack.js"></script>
-	<script src="SLTFeature.js"></script>
 	<script src="game/SLTLevelSettings.js"></script>
+	<script src="game/SLTAsset.js"></script>
+	<script src="game/SLTCompositeAsset.js"></script>
 	<script src="resource/SLTTransport.js"></script>
 	<script src="resource/SLTResourceTicket.js"></script>
 	<script src="resource/SLTResource.js"></script>
@@ -31,6 +33,7 @@
 		var experiments = client._experiments;
 		var features = client._features;
 		var levelPacks = client._levelPacks;
+		debugger;
 
 		var pack = levelPacks[0];
 		var level = pack._levels[0];
