Included minified js files.

--- a/Test.html
+++ b/Test.html
@@ -2,23 +2,23 @@
 <html>
 <head>
 	<title></title>
-	<script src="SLTConfig.js"></script>
-	<script src="SLTUtils.js"></script>
-	<script src="SLTEventDispatcher.js"></script>
-	<script src="SLTTimer.js"></script>
-	<script src="SLTDevice.js"></script>
-	<script src="SLTDeserializer.js"></script>
-	<script src="SLTFeature.js"></script>
-	<script src="game/SLTLevelBoardParser.js"></script>
-	<script src="game/SLTLevel.js"></script>
-	<script src="game/SLTLevelPack.js"></script>
-	<script src="game/SLTLevelSettings.js"></script>
-	<script src="game/SLTAsset.js"></script>
-	<script src="game/SLTCompositeAsset.js"></script>
-	<script src="resource/SLTTransport.js"></script>
-	<script src="resource/SLTResourceTicket.js"></script>
-	<script src="resource/SLTResource.js"></script>
-	<script src="SLTSaltr.js"></script>
+	<script src="SLTConfig.min.js"></script>
+	<script src="SLTUtils.min.js"></script>
+	<script src="SLTEventDispatcher.min.js"></script>
+	<script src="SLTTimer.min.js"></script>
+	<script src="SLTDevice.min.js"></script>
+	<script src="SLTDeserializer.min.js"></script>
+	<script src="SLTFeature.min.js"></script>
+	<script src="game/SLTLevelBoardParser.min.js"></script>
+	<script src="game/SLTLevel.min.js"></script>
+	<script src="game/SLTLevelPack.min.js"></script>
+	<script src="game/SLTLevelSettings.min.js"></script>
+	<script src="game/SLTAsset.min.js"></script>
+	<script src="game/SLTCompositeAsset.min.js"></script>
+	<script src="resource/SLTTransport.min.js"></script>
+	<script src="resource/SLTResourceTicket.min.js"></script>
+	<script src="resource/SLTResource.min.js"></script>
+	<script src="SLTSaltr.min.js"></script>
 </head>
 <body>
 
