--- a/Test.html
+++ b/Test.html
@@ -28,25 +28,27 @@
 	var clientKey = "283672aa-a3a0-7f98-ae37-676ac5bd7472";
 	var saltrClient = new SALTR.SaltrWeb(clientKey);
 	saltrClient.setSocial("123456789", "facebook");
-	//saltrClient.defineFeature("developerFeature", {}, true);
-	saltrClient.useNoFeatures(true);
-	//saltrClient.importLevelPacksFromJSON({"levelPacks":[{"index":0,"token":"PACK_2","levels":[{"id":20393,"index":0,"url":"pack_0/level_0.json","version":181}]},{"index":1,"token":"PACK_1","levels":[{"id":23407,"index":0,"url":"pack_1/level_0.json","version":38},{"id":23408,"index":1,"url":"pack_1/level_1.json","version":101},{"id":20393,"index":2,"url":"pack_1/level_2.json","version":181}]},{"index":2,"token":"PACK_3","levels":[]}]});
-	saltrClient.useNoLevels(true);
+	saltrClient.defineFeature("developerFeature", {}, true);
+	//saltrClient.useNoFeatures = true;
+	saltrClient.importLevelPacksFromJSON({"levelPacks":[{"index":0,"token":"PACK_2","levels":[{"id":20393,"index":0,"url":"pack_0/level_0.json","version":181}]},{"index":1,"token":"PACK_1","levels":[{"id":23407,"index":0,"url":"pack_1/level_0.json","version":38},{"id":23408,"index":1,"url":"pack_1/level_1.json","version":101},{"id":20393,"index":2,"url":"pack_1/level_2.json","version":181}]},{"index":2,"token":"PACK_3","levels":[]}]});
+	//saltrClient.useNoLevels = true;
 	saltrClient.start();
+	saltrClient.connect(loadCompleteHandler, loadFailedHandler);
 
-	/*var levelPacks = saltrClient.levelPacks();
+	/*var levelPacks = saltrClient.levelPacks;
 	var pack = levelPacks[0];
-	var level = pack.levels()[0];
+	var level = pack.levels[0];
 	saltrClient.importLevelFromJSON({"boards":{"UNTITLED_1":{"layers":[{"layerId":"top","chunks":[{"chunkId":1,"cells":[[0,5],[1,5],[2,5],[1,6],[2,7],[3,6],[4,6],[6,6],[5,5],[6,5],[7,5],[5,7],[1,4],[3,4],[4,4],[6,4]],"assets":[{"assetId":2497,"distributionType":"ratio","distributionValue":1},{"assetId":2498,"distributionType":"ratio","distributionValue":1},{"assetId":2499,"distributionType":"ratio","distributionValue":1},{"assetId":2534,"distributionType":"ratio","distributionValue":1},{"assetId":2578,"distributionType":"ratio","distributionValue":1},{"assetId":2719,"distributionType":"ratio","distributionValue":1}]},{"chunkId":2,"cells":[[0,3],[3,7],[4,7],[0,4],[2,4],[5,4],[7,4],[7,3],[6,3],[5,3],[4,3],[3,3],[2,3],[1,3],[0,2],[1,2],[2,2],[4,2],[6,2],[7,2]],"assets":[{"assetId":2749,"distributionType":"ratio","distributionValue":1},{"assetId":2721,"distributionType":"ratio","distributionValue":1},{"assetId":2719,"distributionType":"ratio","distributionValue":1},{"assetId":2534,"distributionType":"ratio","distributionValue":1}]},{"chunkId":3,"cells":[[2,0],[3,0],[4,0],[5,0],[6,1],[4,1],[2,1],[1,1]],"assets":[{"assetId":2534,"distributionType":"ratio","distributionValue":1},{"assetId":2498,"distributionType":"ratio","distributionValue":1}]}],"composites":[],"fixedAssets":[]},{"layerId":"bottom","chunks":[{"chunkId":1,"cells":[[0,3],[1,3],[2,3],[3,3],[4,3],[0,4],[2,4],[4,4],[1,5],[2,5],[4,6],[2,7],[3,7],[4,7]],"assets":[{"assetId":2499,"distributionType":"ratio","distributionValue":1}]}],"composites":[],"fixedAssets":[]},{"layerId":"untitled1","chunks":[],"composites":[],"fixedAssets":[]}],"blockedCells":[[5,6],[2,6]],"rows":8,"cols":8,"cellSize":[30,30],"orientation":"BOTTOM_LEFT","position":[80,250],"properties":{"board":{"prop":"value","asdf":"asdf"}}},"UNTITLED_2":{"layers":[{"layerId":"default","chunks":[{"chunkId":1,"cells":[[6,1],[6,0],[5,0],[4,0],[3,0],[2,0],[1,0],[0,0],[0,1]],"assets":[{"assetId":2534,"distributionType":"ratio","distributionValue":1}]}],"composites":[],"fixedAssets":[]},{"layerId":"untitled1","chunks":[{"chunkId":1,"cells":[[1,1],[2,1],[3,1],[4,1],[5,1],[6,1],[7,1],[7,0]],"assets":[{"assetId":2497,"distributionType":"ratio","distributionValue":1}]}],"composites":[],"fixedAssets":[]},{"layerId":"untitled2","chunks":[],"composites":[],"fixedAssets":[]}],"blockedCells":[],"rows":2,"cols":8,"cellSize":[30,30],"orientation":"BOTTOM_LEFT","position":[80,130],"properties":{"board":{"paop":"paop"}}}},"assetStates":{"1292":"ice","1293":"strawberry","1291":"question","1294":"skull","1497":"1112","1498":"111","1499":"1111"},"assets":{"2749":{"states":[],"type":"asdfasdfadsf123"},"2721":{"states":[],"type":"fsdfasdf"},"2720":{"states":[],"type":"ajdgfhsdgf"},"4090":{"states":[],"type":"panda"},"2534":{"states":[],"type":"regularffdfdf"},"2499":{"states":[],"type":"brown"},"2498":{"states":[1293],"type":"orange"},"2497":{"states":[1292,1293],"type":"blue"},"2719":{"states":[],"type":"afasdfasdfasdf"},"2578":{"states":[],"type":"asdfasdf"}},"properties":{}}, level);*/
 
 	//saltrClient.connect(loadCompleteHandler, loadFailedHandler);
 
 	function loadCompleteHandler() {
-		/*var levelPacks = saltrClient._levelPacks;
+		var levelPacks = saltrClient.levelPacks;
 		var pack = levelPacks[0];
-		var level = pack._levels[0];
+		var level = pack.levels[0];
 
-		saltrClient.loadLevelContentData(level, levelLoadCompleteHandler, levelLoadFailedHandler);*/
+		debugger;
+		saltrClient.loadLevelContentData(level, levelLoadCompleteHandler, levelLoadFailedHandler);
 	}
 
 	function loadFailedHandler(error) {
@@ -54,8 +56,8 @@
 	}
 
 	function levelLoadCompleteHandler() {
-		var pack = saltrClient._levelPacks[0];
-		var level = pack._levels[0];
+		var pack = saltrClient.levelPacks[0];
+		var level = pack.levels[0];
 		
 		console.log(level._boardsNode);
 	}
